[gd_scene load_steps=2 format=3 uid="uid://ckvaaln275hfv"]

[ext_resource type="Script" path="res://game/weapons/guns/common/gun.gd" id="1_in83w"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_in83w")
metadata/_custom_type_script = ExtResource("1_in83w")

[node name="ShootPoint" type="Marker2D" parent="."]

[node name="Aim" type="Line2D" parent="ShootPoint"]
visible = false
z_index = 5
points = PackedVector2Array(0, 0, 2048, 0)
width = 8.0
default_color = Color(0, 0, 0, 0.25098)

[node name="SpreadLeft" type="Line2D" parent="ShootPoint/Aim"]
points = PackedVector2Array(128, 0, 192, 0)
width = 4.0
default_color = Color(0, 0, 0, 0.188235)

[node name="SpreadRight" type="Line2D" parent="ShootPoint/Aim"]
points = PackedVector2Array(128, 0, 192, 0)
width = 4.0
default_color = Color(0, 0, 0, 0.188235)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
